log
Fri 14 Oct 2022 10:04:17 PM UTC: 
 tests:  0|4
total_score: 0/70
41b8f5b
Fri 14 Oct 2022 10:15:02 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
26b88a5
Fri 14 Oct 2022 10:17:08 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
f262ee2
Mon 17 Oct 2022 12:42:40 AM UTC: 
 heap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:30:36: error: expected ‘;’ before ‘}’ token
   30 |     pq->capac = (pq->capac * 2) + 1
      |                                    ^
      |                                    ;
   31 |   }
      |   ~                                 
heap.c:34:21: error: ‘size’ undeclared (first use in this function)
   34 |   if(!pq->heapArray[size + i]) {
      |                     ^~~~
heap.c:34:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
502ed41
Mon 17 Oct 2022 12:42:59 AM UTC: 
 heap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:33:21: error: ‘size’ undeclared (first use in this function)
   33 |   if(!pq->heapArray[size + 1]) {
      |                     ^~~~
heap.c:33:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f7e1a31
